styles/base.css
body {
    background-color: #ffffff;
    color: #2c5a80;
    font-family: Aptos, 'Public Sans', sans-serif;
    position: relative;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

#portrait {
    width: 100px;
    margin: 30px;
    max-width: 100%;
}


header {
    background-color: #2c5a80;
    color: #ffffff;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

h1 {
    text-align: center;
}


#menu {
    font-size: 1.5rem;
    border: 0;
    background: none;
    color: #FFFFFF;
    background-color: #000000;
    text-align: right;
    padding-right: 5px;
}

#menu::before {
    content: "☰";
    color: #FFFFFF;
}

#menu.open::before {
    content: "✖";
    color: #FFFFFF;
}

nav {
    background-color: #000000;
    color: #ffffff;
    padding: 20px;
    display: block;
    /*align-items: space-around;*/
    justify-content: space-around;
    text-align: left;
    line-height: 2.0;
    font-size: 15px;
}

.open a {
    display: block;
}

ul {
    list-style-type: none;
}


nav a {
    color: #ffffff;
    text-decoration: none;
    margin: 10px;
    display: none;
    font-size: 20px;
}

nav a:hover {
    color: #67bbff;
}

h2 {
    text-align: center;
    width: 70%;
    margin: 50px auto 50px auto;
}

main {
    display: block;
    text-align: center;
    flex-grow: 1;
}

.hero {

    position: relative;
}

.hero img {
    width: 100%;
    height: auto;
}

.herolabel {
    position: absolute;
    top: 380px;
    left: 15px;
    background: radial-gradient(#fff, #4D5B97);
    border: 1px solid rgba(0, 0, 0, .75);
    padding: 10px;
    box-shadow: 0 0 3rem #fff;
    opacity: 0.75;


}

.herolabel p {
    margin: 0;
    padding: .25rem;
    font-weight: 700;
    font-size: 10px;
    font-family: Aptos, 'Public Sans', sans-serif;
}

section {
    border: 1px solid #2c5a80;
    border-radius: 3px;
    margin: 20px auto;
    width: 70%;
}

h3 {
    background-color: #2c5a80;
    color: #ffffff;
    text-align: center;
    padding: 20px;
    margin: 0;
}

.item {
    text-align: left;
}

#info {
    margin-bottom: 15px;
}

footer {
    background-color: #2c5a80;
    color: #ffffff;
    text-align: center;
    padding: 20px;
    margin: 50px 0 0 0;
}


.flag {
    width: 40px;
    margin: 0 10px;
}

#lastModified {
    font-style: italic;
    color: #ffffff
}

@media screen and (max-width: 392px) {
    .herolabel {
        display: none;
    }
}

